--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "dev": "babel-node -x \".ts\" -- lib/index.ts",
     "build": "babel lib -x \".ts\" --out-dir build",
     "test": "",
-    "typecheck": "",
+    "typecheck": "tsc",
     "start": "node build"
   },
   "dependencies": {
@@ -15,6 +15,9 @@
     "@babel/core": "^7.18.9",
     "@babel/node": "^7.18.9",
     "@babel/preset-env": "^7.18.9",
-    "@babel/preset-typescript": "^7.18.6"
+    "@babel/preset-typescript": "^7.18.6",
+    "@types/express": "^4.17.13",
+    "@types/node": "^18.6.1",
+    "typescript": "^4.7.4"
   }
 }
