wip: (Add: jest.config.js, lib/__tests__/lib.test.ts | Revise .github/workflows/main.yml, babel.config.js, lib/lib.ts, package-lock.json, package.json; major changes | Delete: index.js)

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,18 @@
 name: Main
 on: [push]
 jobs:
-  Example:
+  Main:
     runs-on: ubuntu-latest
     steps:
       - name: Check out repository code
         uses: actions/checkout@v3
-      - run: echo "Express!"
+      - name: Setup nodejs
+        uses: actions/setup-node@v3
+        with:
+          node-version: 16
+      - name: Typecheck
+        run: npm run typecheck
+      - name: Test
+        run: npm run test
+      - name: Echo
+        run: echo "Express!"
