--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "scripts": {
     "dev": "babel-node -x \".ts\" -- lib/index.ts",
     "build": "babel lib -x \".ts\" --out-dir build",
-    "test": "",
+    "test": "jest --no-cache  --detectOpenHandles --runInBand --forceExit",
     "typecheck": "tsc",
     "start": "node build"
   },
@@ -17,7 +17,11 @@
     "@babel/preset-env": "^7.18.9",
     "@babel/preset-typescript": "^7.18.6",
     "@types/express": "^4.17.13",
+    "@types/jest": "^28.1.6",
     "@types/node": "^18.6.1",
+    "@types/supertest": "^2.0.12",
+    "jest": "^28.1.3",
+    "supertest": "^6.2.4",
     "typescript": "^4.7.4"
   }
 }
