wip: (Edit .github/workflows/main.yml; minor refactor)

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,7 @@
-name: Main
+name: _exp8403
 on: [push]
 jobs:
-  Main:
+  _exp8403:
     runs-on: ubuntu-latest
     steps:
       - name: Check out repository code
