wip: (Add: dist/bundle.min.css, dist/bundle.min.js, dist/bundle.vendor.js, dist/bundle.vendor.min.js, dist/bundle.vendor.min.js.LICENSE.txt, dist/index.html, src/App.tsx, src/__tests__/src.test.tsx, src/setupTests.ts, tsconfig.json | Amend .github/workflows/main.yml, babel.config.js, jest.config.js, package.json, src/vendor.js; big changes | Delete: src/__tests__/src.test.ts)

--- a/package.json
+++ b/package.json
@@ -1,4 +1,10 @@
 {
+  "scripts": {
+    "dev": "webpack --env config=app --watch --mode development",
+    "build": "webpack",
+    "test": "jest",
+    "typecheck": "tsc"
+  },
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
