--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,20 @@
 name: Main
 on: [push]
 jobs:
-  Main:
+  _rea8493:
     runs-on: ubuntu-latest
     steps:
       - name: Check out repository code
         uses: actions/checkout@v3
+      - name: Setup nodejs
+        uses: actions/setup-node@v3
+        with:
+          node-version: 16
+          cache: 'npm'
+      - name: Install
+        run: npm i
+      - name: Typecheck
+        run: npm run typecheck
+      - name: Test
+        run: npm run test
       - run: echo "React!"
