wip: (Modify tsconfig.json; small tweaks)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,12 @@
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
     "noImplicitAny": true,
+    "baseUrl": "./",
+    "paths": {
+      "@/*": [
+        "src/*"
+      ]
+    },
     "noEmit": true
   },
   "include": ["lib/**/*"],
