wip: (Revise lib/index.ts, okteto.yml; minor edits)

--- a/okteto.yml
+++ b/okteto.yml
@@ -2,6 +2,8 @@ build:
   att:
     image: okteto.dev/node:0.0.1
     context: .
+    args:
+      - PORT: ${PORT:3000}
 deploy:
   - kubectl apply -f okteto-k8s.yml
 dev:
