--- a/okteto.yml
+++ b/okteto.yml
@@ -2,8 +2,8 @@ build:
   att:
     image: okteto.dev/node:0.0.3
     context: .
-    args:
-      PORT: ${PORT}
+    #args:
+    #  PORT: ${PORT}
 deploy:
   - kubectl apply -f okteto-k8s.yml
 dev:
