--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,3 +24,4 @@ jobs:
         name: ${{ secrets.OKTETO_NAME }}
         namespace: ${{ secrets.OKTETO_NAMESPACE }}
         timeout: 8m
+        variables: "OJVAR=HAHA1239"
