--- a/okteto.yml
+++ b/okteto.yml
@@ -1,11 +1,15 @@
 build:
   att:
-    image: okteto.dev/node:0.0.5
+    image: okteto.dev/node:0.0.6
     context: .
     args:
       PORT: ${PORT}
       TRYVAROJ: ${PORT}
+    environment:
+      - name=$USER
+      - TRYVAROJ=haha1234
 deploy:
+  - echo $PORT > .env
   - kubectl apply -f okteto-k8s.yml
 dev:
   att:
@@ -14,11 +18,3 @@ dev:
       - .:/usr/src/app
     forward:
       - 9229:9229
-dependencies:
-  att:
-    #repository: https://github.com/okteto/movies-frontend
-    #manifest: okteto.yml
-    #branch: main
-    variables:
-      OJABESA: THEBEST
-    #wait: true
