--- a/okteto-k8s.yml
+++ b/okteto-k8s.yml
@@ -12,7 +12,7 @@ spec:
         app: att
     spec:
       containers:
-      - image: okteto.dev/node:0.0.6
+      - image: okteto.dev/node:0.0.6b
         name: att
 
 ---
