wip: (Amend .github/workflows/main.yml, okteto-k8s.yml, okteto.yml; minor refactor)

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,4 +24,4 @@ jobs:
         name: ${{ secrets.OKTETO_NAME }}
         namespace: ${{ secrets.OKTETO_NAMESPACE }}
         timeout: 8m
-        variables: "OJVAR=HAHA1239"
+        #variables: "OJVAR=HAHA1239"
