--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,11 @@ jobs:
 
     - name: checkout
       uses: actions/checkout@master
+      
+    - name: Make envfile
+      uses: SpicyPizza/create-envfile@v1.3
+      with:
+        OJVAL1234: heyoj333
     
     - uses: okteto/context@latest
       with:
