--- a/package.json
+++ b/package.json
@@ -15,15 +15,23 @@
     "@babel/preset-env": "^7.18.9",
     "@babel/preset-typescript": "^7.18.6",
     "@babel/runtime": "^7.18.9",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/vue": "^6.6.1",
+    "@types/jest": "^28.1.6",
     "@vue/compiler-sfc": "^3.2.37",
+    "@vue/vue3-jest": "^28.0.1",
     "babel-loader": "^8.2.5",
     "css-loader": "^6.7.1",
     "html-webpack-plugin": "^5.5.0",
+    "jest": "^28.1.3",
+    "jest-environment-jsdom": "^28.1.3",
     "mini-css-extract-plugin": "^2.6.1",
     "sass": "^1.54.0",
     "sass-loader": "^13.0.2",
+    "typescript": "^4.7.4",
     "vue-loader": "^17.0.0",
     "vue-style-loader": "^4.1.3",
+    "vue-tsc": "^0.39.2",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.9.3"
